--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/ui": "^0.17.1",
     "babel-loader": "^8.2.5",
+    "jsdom": "^20.0.0",
     "msw": "^0.43.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
