--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
