--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
